# d-feet

./: .gitignore  .gitlab-ci.yml  AUTHORS  HACKING  MANIFEST.in  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  d-feet  d-feet.doap  meson.build  meson_options.txt  meson_post_install.py  org.gnome.d-feet.json  org.gnome.dfeet.json  setup.py
data/: Makefile.am  d-feet.appdata.xml.in  d-feet.desktop.in.in  meson.build  org.gnome.d-feet.appdata.xml.in  org.gnome.d-feet.desktop.in.in  org.gnome.d-feet.gschema.xml  org.gnome.dfeet.appdata.xml.in  org.gnome.dfeet.desktop.in.in  org.gnome.dfeet.gresource.xml  org.gnome.dfeet.gschema.xml
data/icons/: Makefile.am  meson.build
data/ui/: Makefile.am  addconnectiondialog.ui  app-menu.ui  bus.ui  executedialog.ui  introspection.ui  mainwindow.ui  meson.build
dfeet/: DFeetApp.py  bus_watch.py  dbus_introspector.py  dbus_utils.py  introspect_data.py  introspection.py  introspection_helper.py  settings.py
dfeet/_ui/: __init__.py  addconnectiondialog.py  busbox.py  busnamebox.py  busnameinfobox.py  busnameview.py  executemethoddialog.py  uiloader.py  wnck_utils.py
help/: LINGUAS  Makefile.am  meson.build
help/C/: basics.page  index.page
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/hu/: hu.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/sv/: sv.po
help/uk/: uk.po
po/: LINGUAS  POTFILES.in  POTFILES.skip  bs.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  hr.po  hu.po  id.po  lv.po  meson.build  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po
src/: Makefile.am  d-feet.in  meson.build
src/dfeet/: Makefile.am  addconnectiondialog.py  application.py  bus_watch.py  dbus_utils.py  executemethoddialog.py  introspection.py  introspection_helper.py  meson.build  settings.py  uiloader.py  window.py  wnck_utils.py
src/tests/: Makefile.am  meson.build  tests.py  tests.py.in
tests/: tests.py  tests.py~  uifile_tests.py
ui/: addconnectiondialog.ui  buswatch.ui  default-actiongroup.ui  dfeet.desktop  executedialog.ui  introspection.ui  mainwindow.ui
