df_data = files(
  '__init__.py',
  'application.py',
  'addconnectiondialog.py',
  'bus_watch.py',
  'dbus_utils.py',
  'executemethoddialog.py',
  'introspection_helper.py',
  'introspection.py',
  'settings.py',
  'uiloader.py',
  'wnck_utils.py',
  'window.py',
)

python.install_sources(
  df_data,
  subdir: 'dfeet',
  pure: true,
)
